@@ -410,6 +410,8 @@ enum FuncCode
 	// 315
 	LFUN_GRAPHICS_GROUPS_UNIFY,
 	LFUN_SET_GRAPHICS_GROUP,
+	LFUN_BRANCH_ACTIVATE,
+	LFUN_BRANCH_DEACTIVATE,
 	LFUN_LASTACTION                  // end of the table
 };
 
